fix: animation problems with frame and description animations on hover on uneven projects in portfolio section

--- a/src/app/my-portfolio/my-portfolio.scss
+++ b/src/app/my-portfolio/my-portfolio.scss
@@ -126,7 +126,25 @@ h1{
     @include mixin.d-flex($justify-content: flex-start, $align-items: flex-start, $gap: 80px);
     position: relative;
     width: 100%;
+
+    &:hover .img-frame-onhover-uneven::after{
+        opacity: 100;
+    }
+
+    &:hover .img-frame-onhover-uneven::before{
+        opacity: 100;
+        rotate: 270deg;
+    }
+
+    &:hover .description-wrap{
+        opacity: 100;
+    }
+
+    &:hover .description-wrap.uneven{
+        left: calc($project-img-width + 80px);
+    }
 }
+
 
 .project-wrap-even{
     @include mixin.d-flex($justify-content: flex-end, $align-items: flex-start, $gap: 80px);
@@ -150,6 +168,12 @@ aside{
     @include mixin.d-flex($flex-direction: column, $align-items: flex-start, $justify-content: flex-end, $gap:16px);
     width: $project-img-width;
     height: $project-img-height;
+    opacity: 0;
+    transition: opacity 0.3 ease;
+
+    &:hover{
+        opacity: 100;
+    }
 }
 
 .uneven{
@@ -157,10 +181,6 @@ aside{
     left: 0;
     bottom: 0;
     transition: left 0.3s ease;
-}
-
-.uneven:hover{
-    left: calc($project-img-width + 80px);
 }
 
 .even{
